# nav_pcontroller-release

./: CMakeLists.txt  PKGBUILD  README.md  arch.store  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
doc/html/: BaseDistance_8cc__incl.map  BaseDistance_8cc_source.html  BaseDistance_8h__dep__incl.map  BaseDistance_8h__dep__incl.md5  BaseDistance_8h__incl.md5  classBaseDistance_1_1Vector2.html  classBasePController-members.html  classBasePController.html  classSpeedFilter-members.html  classSpeedFilter.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  functions_vars.html  globals.html  graph_legend.html  index.html  namespacemembers_type.html  namespacetf.html  nav__pcontroller_8cc__incl.map  (+12 more)
launch/: example.launch
nav_pcontroller/: CHANGELOG.rst  CMakeLists.txt  package.xml
nav_pcontroller/doc/: manifest.yaml
nav_pcontroller/doc/html/: BaseDistance_8cc.html  BaseDistance_8cc__incl.md5  BaseDistance_8h.html  BaseDistance_8h__incl.map  BaseDistance_8h_source.html  BaseDistance__test_8cc.html  BaseDistance__test_8cc__incl.map  BaseDistance__test_8cc__incl.md5  BaseDistance__test_8cc_source.html  annotated.html  classBaseDistance-members.html  classBaseDistance.html  classBaseDistance_1_1Vector2-members.html  dir_000000_000001.html  dir_a41c4ce5d433e6ee77da536af412ad2b.html  dir_a41c4ce5d433e6ee77da536af412ad2b_dep.map  dir_a41c4ce5d433e6ee77da536af412ad2b_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals_defs.html  globals_func.html  index-msg.html  namespacemembers.html  namespaces.html  nav__pcontroller_8cc.html  nav__pcontroller_8h.html  nav__pcontroller_8h__dep__incl.map  speed__filter_8cc.html  speed__filter_8cc__incl.map  speed__filter_8h__dep__incl.md5  speed__filter_8h__incl.map  speed__filter_8h__incl.md5  speed__filter_8h_source.html
nav_pcontroller/include/nav_pcontroller/: BaseDistance.h  speed_filter.h
nav_pcontroller/launch/: boxy_nav_pcontroller.launch  pr2_nav_pcontroller.launch
nav_pcontroller/src/: BaseDistance.cc
rpm/: ros-indigo-nav-pcontroller.spec  ros-jade-nav-pcontroller.spec  ros-kinetic-nav-pcontroller.spec  ros-lunar-nav-pcontroller.spec  template.spec
src/: BaseDistance.cc  nav_pcontroller.cc  speed_filter.cc
(+2 files in other folders)
