<?xml version="1.0"?>
<package>
  <name>nav_pcontroller</name>
  <version>0.1.2</version>
  <description>
    Simple P-Controller for a holonomic robot base
  </description>

  <author>Ingo Kresse</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>

  <license>BSD</license>
  <url type="website">https://www.github.com/code-iai/nav_pcontroller</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
</package>
